add master dark script

--- a/data_anal/analysis.ipynb
+++ b/data_anal/analysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,8 +74,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filter stars which have no parallax data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cluster raidus is approx 2.671367155913134 pc\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 415 entries, 0 to 1589\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column   Non-Null Count  Dtype  \n",
+      "---  ------   --------------  -----  \n",
+      " 0   _r       415 non-null    float64\n",
+      " 1   RA_ICRS  415 non-null    float64\n",
+      " 2   DE_ICRS  415 non-null    float64\n",
+      " 3   Plx      415 non-null    float64\n",
+      " 4   e_Plx    415 non-null    float64\n",
+      " 5   Gmag     415 non-null    float64\n",
+      " 6   e_Gmag   415 non-null    float64\n",
+      " 7   BPmag    415 non-null    float64\n",
+      " 8   e_BPmag  415 non-null    float64\n",
+      " 9   RPmag    415 non-null    float64\n",
+      " 10  e_RPmag  415 non-null    float64\n",
+      "dtypes: float64(11)\n",
+      "memory usage: 38.9 KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.dropna(subset=[\"Plx\", \"Gmag\", \"BPmag\", \"RPmag\"], inplace=True)\n",
+    "# data.dropna(subset=[\"Gmag\", \"BPmag\", \"RPmag\"], inplace=True)\n",
+    "# no_plx_data = data.dropna(subset=[\"Plx\"])\n",
+    "\n",
+    "distance_from_center = data[\"_r\"]\n",
+    "R_ang = 8 # 7 arcmin is approx the radius of m29\n",
+    "d = 1148 # distance to cluster in parsecs\n",
+    "R = d*R_ang/(60*57.299) # radius of the cluster in pc\n",
+    "print(f\"cluster raidus is approx {R} pc\")\n",
+    "\n",
+    "# data = data[distance_from_center < R_ang]\n",
+    "parallax_min = data[\"Plx\"] - data[\"e_Plx\"]\n",
+    "parallax_max = data[\"Plx\"] + data[\"e_Plx\"]\n",
+    "data = data[(parallax_max/1000 > 1/(d + R)) & (parallax_min/1000 < 1/(d - R))]\n",
+    "\n",
+    "print(data.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +144,11 @@
     "bp_mags = data[\"BPmag\"]\n",
     "rp_mags = data[\"RPmag\"]\n",
     "\n",
-    "ax.scatter3D(g_mags, bp_mags, rp_mags)\n",
+    "ax.scatter3D(bp_mags, bp_mags - g_mags, bp_mags - rp_mags, s=3, color='red')\n",
+    "# no_plx_gmags = no_plx_data[\"Gmag\"] \n",
+    "# no_plx_bpmags = no_plx_data[\"BPmag\"]\n",
+    "# no_plx_rpmags = no_plx_data[\"RPmag\"]\n",
+    "# ax.scatter3D(no_plx_bpmags, no_plx_bpmags - no_plx_gmags, no_plx_bpmags - no_plx_rpmags, s=1, color='green')\n",
     "plt.show()"
    ]
   },
