isochrones are on top of each other

--- a/data_anal/catalogue_analysis/catalogue.ipynb
+++ b/data_anal/catalogue_analysis/catalogue.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,40 +129,9 @@
       "u: 2641, g: 2641, B: 2641\n",
       "2641\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "count    2641.000000\n",
-       "mean       17.641915\n",
-       "std         1.994452\n",
-       "min         4.968519\n",
-       "25%        16.699079\n",
-       "50%        17.815018\n",
-       "75%        18.753120\n",
-       "max        25.865894\n",
-       "Name: I, dtype: float64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%matplotlib qt\n",
-    "fig = plt.figure()\n",
-    "ax = plt.axes(projection=\"3d\")\n",
-    "gmags = data[\"gmag\"]\n",
-    "rmags = data[\"rmag\"]\n",
-    "imags = data[\"imag\"]\n",
-    "zmags = data[\"zmag\"]\n",
-    "\n",
-    "# ax.scatter3D(gmags, rmags - gmags, imags - gmags, s=1, color='red')\n",
-    "# ax.set_xlabel(\"G mag\")\n",
-    "# ax.set_ylabel(\"R - G\")\n",
-    "# ax.set_zlabel(\"I - G\")\n",
-    "# plt.show()\n",
     "def ugriz_to_ubvri(ugriz):\n",
     "    u, g, r, i, z = ugriz\n",
     "    u = np.array(u)\n",
@@ -182,41 +151,140 @@
     "    return (U, B, V, R, I)\n",
     "\n",
     "umags = pd.Series([0 for _ in range(len(gmags))])\n",
-    "data[\"U\"], data[\"B\"], data[\"V\"], data[\"R\"], data[\"I\"] = ugriz_to_ubvri((umags, gmags, rmags, imags, zmags))\n",
+    "gmags = data[\"gmag\"]\n",
+    "rmags = data[\"rmag\"]\n",
+    "imags = data[\"imag\"]\n",
+    "zmags = data[\"zmag\"]\n",
+    "_, data[\"B\"], data[\"V\"], data[\"R\"], data[\"I\"] = ugriz_to_ubvri((umags, gmags, rmags, imags, zmags))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           M_ini         MV        U-B        B-V        V-R        V-I\n",
+      "count  51.000000  51.000000  51.000000  51.000000  51.000000  51.000000\n",
+      "mean    1.550843   4.139249   0.307276   0.499929   0.297457   0.550755\n",
+      "std     0.869818   2.767242   0.559377   0.523928   0.294385   0.577615\n",
+      "min     0.500000   0.452500  -0.442900  -0.139700  -0.048800  -0.165600\n",
+      "25%     0.813500   1.629900  -0.070550  -0.016000   0.011100  -0.005750\n",
+      "50%     1.323000   3.712800   0.071200   0.438000   0.259300   0.498700\n",
+      "75%     2.152000   6.464300   0.770050   0.974800   0.540950   0.996350\n",
+      "max     3.500000   9.021100   1.266700   1.333700   0.805300   1.569000\n",
+      "           M_ini         MV        U-B        B-V        V-R        V-I\n",
+      "count  51.000000  51.000000  51.000000  51.000000  51.000000  51.000000\n",
+      "mean    1.550843   4.121516   0.310863   0.501149   0.298039   0.552339\n",
+      "std     0.869818   2.787940   0.555439   0.522569   0.293754   0.575870\n",
+      "min     0.500000   0.329000  -0.413300  -0.132900  -0.045400  -0.157700\n",
+      "25%     0.813500   1.612250  -0.068450  -0.013850   0.012050  -0.003200\n",
+      "50%     1.323000   3.710300   0.071200   0.437800   0.259200   0.498600\n",
+      "75%     2.152000   6.464100   0.770150   0.974900   0.541000   0.996400\n",
+      "max     3.500000   9.020800   1.266800   1.333800   0.805300   1.569100\n",
+      "            M_ini          MV         U-B         B-V         V-R         V-I\n",
+      "count  175.000000  175.000000  175.000000  175.000000  175.000000  175.000000\n",
+      "mean     1.827794    2.026248    0.171517    0.428384    0.253202    0.493605\n",
+      "std      0.432422    1.996593    0.302972    0.282038    0.156887    0.295274\n",
+      "min      0.500000    0.950500    0.030200    0.124800    0.084000    0.170600\n",
+      "25%      2.004000    0.991400    0.051250    0.267400    0.166700    0.331650\n",
+      "50%      2.018000    1.268000    0.058600    0.309200    0.191200    0.376800\n",
+      "75%      2.032000    1.463550    0.068250    0.493550    0.283600    0.557950\n",
+      "max      2.047000    9.018100    1.267300    1.334200    0.805600    1.569800\n"
+     ]
+    }
+   ],
    "source": [
     "times = [6.0 + i*0.1 for i in range(31)]\n",
     "\n",
     "filenames = [f\"isochrone_{10*t:.0f}.dat\" for t in times]\n",
     "isochrone_cols = [\"M_ini\", \"MV\", \"U-B\", \"B-V\", \"V-R\", \"V-I\"]\n",
-    "isochrones = {times[i]: pd.read_csv(os.path.join(\"..\", \"isochrones\", filenames[i]), delim_whitespace=True)[isochrone_cols] for i in range(len(filenames))}\n"
+    "isochrones = {times[i]: pd.read_csv(os.path.join(\"..\", \"isochrones\", filenames[i]), delim_whitespace=True)[isochrone_cols] for i in range(len(filenames))}\n",
+    "\n",
+    "print(isochrones[6].describe())\n",
+    "print(isochrones[7.5].describe())\n",
+    "print(isochrones[9].describe())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "%matplotlib qt\n",
     "fig = plt.figure()\n",
     "ax = plt.axes(projection=\"3d\")\n",
-    "vmags = isochrones[9.0][\"MV\"] \n",
-    "bmags = isochrones[9.0][\"B-V\"] + vmags\n",
-    "rmags = vmags - isochrones[9.0][\"V-R\"]\n",
+    "m29_dist = 1148 # pc\n",
+    "obs_minus_absolue = 5*np.log(m29_dist) - 5\n",
+    "B = data[\"B\"] - obs_minus_absolue\n",
+    "V = data[\"V\"] - obs_minus_absolue\n",
+    "R = data[\"R\"] - obs_minus_absolue\n",
+    "I = data[\"I\"] - obs_minus_absolue\n",
+    "ax.scatter3D(V, B-V, V-R, s=1, color='red')\n",
     "\n",
-    "ax.scatter3D(vmags, bmags - vmags, rmags - vmags, s=1, color='red')\n",
-    "ax.set_xlabel(\"G mag\")\n",
-    "ax.set_ylabel(\"R - G\")\n",
-    "ax.set_zlabel(\"I - G\")\n",
+    "log_t = 7.5\n",
+    "vmags = isochrones[log_t][\"MV\"] \n",
+    "bmags = isochrones[log_t][\"B-V\"] + vmags\n",
+    "rmags = vmags - isochrones[log_t][\"V-R\"]\n",
+    "imags = vmags - isochrones[log_t][\"V-I\"]\n",
+    "\n",
+    "ax.scatter3D(vmags, bmags - vmags, vmags - rmags, s=3, color='blue')\n",
+    "ax.set_xlabel(\"V mag\")\n",
+    "ax.set_ylabel(\"B - V\")\n",
+    "ax.set_zlabel(\"V - R\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import colors\n",
+    "%matplotlib qt\n",
+    "fig = plt.figure()\n",
+    "ax = plt.axes(projection=\"3d\")\n",
+    "# catalogue data\n",
+    "m29_dist = 1148 # pc\n",
+    "obs_minus_absolue = 5*np.log10(m29_dist) - 5\n",
+    "B = data[\"B\"] - obs_minus_absolue\n",
+    "V = data[\"V\"] - obs_minus_absolue\n",
+    "R = data[\"R\"] - obs_minus_absolue\n",
+    "I = data[\"I\"] - obs_minus_absolue\n",
+    "ax.scatter3D(V, B-V, V-R, s=1, color='red')\n",
+    "\n",
+    "# isochrone\n",
+    "cdict = {'red':   ((0.0,  0.22, 0.0),\n",
+    "                   (0.5,  1.0, 1.0),\n",
+    "                   (1.0,  0.89, 1.0)),\n",
+    "\n",
+    "         'green': ((0.0,  0.49, 0.0),\n",
+    "                   (0.5,  1.0, 1.0),\n",
+    "                   (1.0,  0.12, 1.0)),\n",
+    "\n",
+    "         'blue':  ((0.0,  0.72, 0.0),\n",
+    "                   (0.5,  0.0, 0.0),\n",
+    "                   (1.0,  0.11, 1.0))}\n",
+    "\n",
+    "cmap = colors.LinearSegmentedColormap('custom', cdict)\n",
+    "\n",
+    "times = [6, 7, 8, 9]\n",
+    "for index, log_t in enumerate(times):\n",
+    "    vmags = isochrones[log_t][\"MV\"] \n",
+    "    bmags = isochrones[log_t][\"B-V\"] + vmags\n",
+    "    rmags = vmags - isochrones[log_t][\"V-R\"]\n",
+    "    imags = vmags - isochrones[log_t][\"V-I\"]\n",
+    "\n",
+    "    ax.plot3D(vmags, bmags - vmags, vmags - rmags, c=cmap(index/len(times)))\n",
+    "ax.set_xlabel(\"V mag\")\n",
+    "ax.set_ylabel(\"B - V\")\n",
+    "ax.set_zlabel(\"V - R\")\n",
     "plt.show()"
    ]
   },
