commit all changes

--- a/data_anal/catalogue_analysis/catalogue.ipynb
+++ b/data_anal/catalogue_analysis/catalogue.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
     "ax2.set_xlim((-0.5, 2))\n",
     "ax2.set_ylim((-2, 7))\n",
     "\n",
-    "ax3.set_ylim((-5, 6.5))\n",
+    "ax3.set_ylim((-2, 6.5))\n",
     "ax3.set_xlim((-1, 1.5))\n",
     "ax1.invert_yaxis()\n",
     "ax2.invert_yaxis()\n",
@@ -239,11 +239,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Metric in UBVRI space \n",
+    "attempt 1: metric is of data scaled so that its std is 1 (approx the same shape in all dimensions)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def metric1(color1, color2, stds):\n",
+    "    \"\"\"\n",
+    "    color is the tuple (U,B,V,R,I), or (B, V, R, I)\n",
+    "    stds is a list of the same shape as colors, and contains the stds of the corresponding colors\n",
+    "    \"\"\"\n",
+    "    return sum([((color1[i] - color2[i])/stds[i])**2 for i in range(len(color1))])**0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold_point = 1"
+   ]
   }
  ],
  "metadata": {
