add mass function

--- a/data_anal/catalogue_analysis/catalogue.ipynb
+++ b/data_anal/catalogue_analysis/catalogue.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,35 +172,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib qt\n",
     "from matplotlib import colors\n",
     "\n",
-    "fig, (ax1, ax2, ax3) = plt.subplots(nrows=1, ncols=3)\n",
+    "def plot_3_cmds(data):\n",
+    "    fig, (ax1, ax2, ax3) = plt.subplots(nrows=1, ncols=3)\n",
+    "    B = data[\"B\"]\n",
+    "    V = data[\"V\"]\n",
+    "    R = data[\"R\"]\n",
+    "    I = data[\"I\"]\n",
+    "\n",
+    "# ax1 B-V vs V\n",
+    "    ax1.scatter(B-V, V, s=1)\n",
+    "    ax1.set_xlabel(\"B-V\")\n",
+    "    ax1.set_ylabel(\"V\")\n",
+    "\n",
+    "# ax2 V-R vs R\n",
+    "    ax2.scatter(V-R, R, s=1)\n",
+    "    ax2.set_xlabel(\"V-R\")\n",
+    "    ax2.set_ylabel(\"R\")\n",
+    "\n",
+    "# ax3 R-I vs I\n",
+    "    ax3.scatter(R-I, I, s=1)\n",
+    "    ax3.set_xlabel(\"R-I\")\n",
+    "    ax3.set_ylabel(\"I\")\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "# isochrone\n",
+    "    cdict = {'red':   ((0.0,  0.22, 0.0),\n",
+    "                       (0.5,  1.0, 1.0),\n",
+    "                       (1.0,  0.89, 1.0)),\n",
+    "\n",
+    "             'green': ((0.0,  0.49, 0.0),\n",
+    "                       (0.5,  1.0, 1.0),\n",
+    "                       (1.0,  0.12, 1.0)),\n",
+    "\n",
+    "             'blue':  ((0.0,  0.72, 0.0),\n",
+    "                       (0.5,  0.0, 0.0),\n",
+    "                       (1.0,  0.11, 1.0))}\n",
+    "\n",
+    "    cmap = colors.LinearSegmentedColormap('custom', cdict)\n",
+    "\n",
+    "    times = [6.0 + 0.1*i for i in range(31)]\n",
+    "    for index, log_t in enumerate(times):\n",
+    "        vmags = isochrones[log_t][\"MV\"] \n",
+    "        bmags = isochrones[log_t][\"B-V\"] + vmags\n",
+    "        rmags = vmags - isochrones[log_t][\"V-R\"]\n",
+    "        imags = vmags - isochrones[log_t][\"V-I\"]\n",
+    "        umags = isochrones[log_t][\"U-B\"] + bmags \n",
+    "        isochrones[log_t][\"isoU\"] = umags\n",
+    "        isochrones[log_t][\"isoB\"] = bmags\n",
+    "        isochrones[log_t][\"isoV\"] = vmags\n",
+    "        isochrones[log_t][\"isoR\"] = rmags\n",
+    "        isochrones[log_t][\"isoI\"] = imags\n",
+    "        # ax1.plot(bmags - vmags, bmags, c=cmap(index/len(times)))\n",
+    "        # ax2.plot(vmags - rmags, vmags, c=cmap(index/len(times)))\n",
+    "        # ax3.plot(rmags - imags, rmags, c=cmap(index/len(times)))\n",
+    "    ax1.set_xlim((-0.5, 2.5))\n",
+    "    ax1.set_ylim((-2, 7.5))\n",
+    "\n",
+    "    ax2.set_xlim((-0.5, 2))\n",
+    "    ax2.set_ylim((-2, 7))\n",
+    "\n",
+    "    ax3.set_ylim((-2, 6.5))\n",
+    "    ax3.set_xlim((-1, 1.5))\n",
+    "    ax1.invert_yaxis()\n",
+    "    ax2.invert_yaxis()\n",
+    "    ax3.invert_yaxis()\n",
+    "plot_3_cmds(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Metric in UBVRI space \n",
+    "attempt 1: metric is of data scaled so that its std is 1 (approx the same shape in all dimensions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def metric1(color1, color2, stds):\n",
+    "    \"\"\"\n",
+    "    color is the tuple (U,B,V,R,I), or (B, V, R, I)\n",
+    "    stds is a list of the same shape as colors, and contains the stds of the corresponding colors\n",
+    "    \"\"\"\n",
+    "    return sum([((color1[i] - color2[i])/stds[i])**2 for i in range(len(color1))])**0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['_r', 'RAJ2000', 'DEJ2000', 'gmag', 'e_gmag', 'rmag', 'e_rmag', 'imag',\n",
+      "       'e_imag', 'zmag', 'e_zmag', 'B', 'V', 'R', 'I'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "from matplotlib import colors\n",
+    "%matplotlib qt\n",
+    "fig = plt.figure()\n",
+    "ax = plt.axes(projection=\"3d\")\n",
+    "# catalogue data\n",
+    "# outliers identified by eye\n",
+    "data = data[data[\"B\"] > 0]\n",
+    "data = data[data[\"V\"] > 0]\n",
+    "data = data[data[\"R\"] > 0]\n",
     "B = data[\"B\"]\n",
     "V = data[\"V\"]\n",
     "R = data[\"R\"]\n",
     "I = data[\"I\"]\n",
+    "ax.scatter3D(B, V, R, s=1, color='red')\n",
     "\n",
-    "# ax1 B-V vs V\n",
-    "ax1.scatter(B-V, V, s=1)\n",
-    "ax1.set_xlabel(\"B-V\")\n",
-    "ax1.set_ylabel(\"V\")\n",
-    "\n",
-    "# ax2 V-R vs R\n",
-    "ax2.scatter(V-R, R, s=1)\n",
-    "ax2.set_xlabel(\"V-R\")\n",
-    "ax2.set_ylabel(\"R\")\n",
-    "\n",
-    "# ax3 R-I vs I\n",
-    "ax3.scatter(R-I, I, s=1)\n",
-    "ax3.set_xlabel(\"R-I\")\n",
-    "ax3.set_ylabel(\"I\")\n",
-    "\n",
-    "plt.tight_layout()\n",
     "# isochrone\n",
     "cdict = {'red':   ((0.0,  0.22, 0.0),\n",
     "                   (0.5,  1.0, 1.0),\n",
@@ -216,34 +314,130 @@
     "\n",
     "cmap = colors.LinearSegmentedColormap('custom', cdict)\n",
     "\n",
-    "times = [6.0 + 0.1*i for i in range(31)]\n",
+    "times = [6, 7, 8, 9]\n",
     "for index, log_t in enumerate(times):\n",
     "    vmags = isochrones[log_t][\"MV\"] \n",
     "    bmags = isochrones[log_t][\"B-V\"] + vmags\n",
     "    rmags = vmags - isochrones[log_t][\"V-R\"]\n",
     "    imags = vmags - isochrones[log_t][\"V-I\"]\n",
-    "    ax1.plot(bmags - vmags, bmags, c=cmap(index/len(times)))\n",
-    "    ax2.plot(vmags - rmags, vmags, c=cmap(index/len(times)))\n",
-    "    ax3.plot(rmags - imags, rmags, c=cmap(index/len(times)))\n",
-    "ax1.set_xlim((-0.5, 2.5))\n",
-    "ax1.set_ylim((-2, 7.5))\n",
     "\n",
-    "ax2.set_xlim((-0.5, 2))\n",
-    "ax2.set_ylim((-2, 7))\n",
-    "\n",
-    "ax3.set_ylim((-2, 6.5))\n",
-    "ax3.set_xlim((-1, 1.5))\n",
-    "ax1.invert_yaxis()\n",
-    "ax2.invert_yaxis()\n",
-    "ax3.invert_yaxis()"
+    "    ax.plot3D(bmags, vmags, rmags, c=cmap(index/len(times)))\n",
+    "ax.set_xlabel(\"B mag\")\n",
+    "ax.set_ylabel(\"V mag\")\n",
+    "ax.set_zlabel(\"R mag\")\n",
+    "plt.show()\n",
+    "print(data.columns)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Metric in UBVRI space \n",
-    "attempt 1: metric is of data scaled so that its std is 1 (approx the same shape in all dimensions)"
+    "## Plot n_stars below a certain distance "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.8657112086230354, 1.5600759542416949, 1.4411258827436177, 1.5674809337549491]\n",
+      "Index(['M_ini', 'MV', 'U-B', 'B-V', 'V-R', 'V-I', 'isoU', 'isoB', 'isoV',\n",
+      "       'isoR', 'isoI'],\n",
+      "      dtype='object')\n",
+      "675\n"
+     ]
+    }
+   ],
+   "source": [
+    "stds = [np.std(data[filter]) for filter in [\"B\", \"V\", \"R\", \"I\"]]\n",
+    "print(stds)\n",
+    "right_isochrone = isochrones[7.1]\n",
+    "print(right_isochrone.columns)\n",
+    "\n",
+    "distance_data = []\n",
+    "mass_data = []\n",
+    "print(len(data[\"B\"]))\n",
+    "for i in range(len(data[\"B\"])):\n",
+    "    # index of isochrone where the distance is minimal\n",
+    "    min_index = np.argmin([\n",
+    "        metric1(\n",
+    "            (data[\"B\"].iloc[i], data[\"V\"].iloc[i], data[\"R\"].iloc[i], data[\"I\"].iloc[i]),\n",
+    "            (right_isochrone[\"isoB\"].iloc[j], right_isochrone[\"isoV\"].iloc[j], right_isochrone[\"isoR\"].iloc[j], right_isochrone[\"isoI\"].iloc[j]), \n",
+    "            stds\n",
+    "        ) for j in range(len(right_isochrone[\"isoB\"]))\n",
+    "    ])\n",
+    "    mass_data.append(right_isochrone[\"M_ini\"][min_index])\n",
+    "    # dist = np.min([\n",
+    "    #     metric1(\n",
+    "    #         (data[\"B\"].iloc[i], data[\"V\"].iloc[i], data[\"R\"].iloc[i], data[\"I\"].iloc[i]),\n",
+    "    #         (right_isochrone[\"isoB\"].iloc[j], right_isochrone[\"isoV\"].iloc[j], right_isochrone[\"isoR\"].iloc[j], right_isochrone[\"isoI\"].iloc[j]), \n",
+    "    #         stds\n",
+    "    #     ) for j in range(len(right_isochrone[\"isoB\"]))\n",
+    "    # ])\n",
+    "    dist = metric1(\n",
+    "        (data[\"B\"].iloc[i], data[\"V\"].iloc[i], data[\"R\"].iloc[i], data[\"I\"].iloc[i]), \n",
+    "        (right_isochrone[\"isoB\"].iloc[min_index], right_isochrone[\"isoV\"].iloc[min_index], right_isochrone[\"isoR\"].iloc[min_index], right_isochrone[\"isoI\"].iloc[min_index])\n",
+    "    )\n",
+    "    distance_data.append(dist)\n",
+    "\n",
+    "data[\"distance\"] = distance_data\n",
+    "data[\"mass\"] = mass_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               _r     RAJ2000     DEJ2000        gmag      e_gmag        rmag  \\\n",
+      "count  675.000000  675.000000  675.000000  675.000000  652.000000  675.000000   \n",
+      "mean     4.627891  305.934188   38.483931   18.071929    0.010234   16.848325   \n",
+      "std      1.591300    0.074790    0.056365    1.734367    0.012759    1.465992   \n",
+      "min      0.293800  305.796876   38.371720   13.095000    0.000000   12.468000   \n",
+      "25%      3.409650  305.873374   38.439147   16.962150    0.004200   15.987800   \n",
+      "50%      4.883600  305.929142   38.482580   18.496000    0.007500   17.183000   \n",
+      "75%      6.007650  305.991380   38.526366   19.498300    0.012925   18.046900   \n",
+      "max      6.999800  306.088732   38.599918   20.815300    0.242400   19.894000   \n",
+      "\n",
+      "           e_rmag        imag      e_imag        zmag      e_zmag           B  \\\n",
+      "count  646.000000  675.000000  643.000000  675.000000  653.000000  675.000000   \n",
+      "mean     0.006957   16.245478    0.007733   15.830681    0.006086    5.414977   \n",
+      "std      0.008833    1.388270    0.020697    1.329125    0.007923    1.867095   \n",
+      "min      0.000000   11.826000    0.000000   11.112000    0.000000    0.130103   \n",
+      "25%      0.003125   15.379100    0.002800   15.006700    0.002700    4.192365   \n",
+      "50%      0.005050   16.497300    0.004400   16.020000    0.004300    5.875437   \n",
+      "75%      0.008200   17.244050    0.006900   16.809850    0.006400    6.943042   \n",
+      "max      0.124000   21.048200    0.341800   20.247300    0.096800    8.936202   \n",
+      "\n",
+      "                V           R           I    distance        mass  \n",
+      "count  675.000000  675.000000  675.000000  675.000000  675.000000  \n",
+      "mean     4.733894    4.341134    4.081823    0.333709    1.176212  \n",
+      "std      1.561233    1.442195    1.568643    0.648817    0.448814  \n",
+      "min      0.222831    0.025551   -0.522420    0.028255    0.520000  \n",
+      "25%      3.804124    3.517024    3.191851    0.111571    0.862000  \n",
+      "50%      5.099283    4.634148    4.205347    0.163934    1.007000  \n",
+      "75%      6.045259    5.392136    4.978406    0.275730    1.272000  \n",
+      "max      6.693074    9.328023   14.297665    7.140279    3.500000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "%matplotlib qt\n",
+    "plt.hist(data[\"mass\"], bins=50, range=[0, 4])\n",
+    "plt.show()\n",
+    "threshold = 0.25\n",
+    "data_in_cluster = data[data[\"distance\"] < threshold]\n",
+    "\n",
+    "print(data.describe())"
    ]
   },
   {
@@ -251,23 +445,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def metric1(color1, color2, stds):\n",
-    "    \"\"\"\n",
-    "    color is the tuple (U,B,V,R,I), or (B, V, R, I)\n",
-    "    stds is a list of the same shape as colors, and contains the stds of the corresponding colors\n",
-    "    \"\"\"\n",
-    "    return sum([((color1[i] - color2[i])/stds[i])**2 for i in range(len(color1))])**0.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "threshold_point = 1"
-   ]
+   "source": []
   }
  ],
  "metadata": {
